--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div id="top_section">
     <p id="name">Emre Bozkurt</p>
-    <a href="" class="link">projects</a>
-    <a href="" class="link">about</a>
-    <a href="" class="link">contact</a>
-    <a href="" class="link" id="linkedin_top">Linked<span id="linkedin_box">in</span></a>
+    <a href="#projects" class="link">projects</a>
+    <a href="#about" class="link">about</a>
+    <a href="#contact" class="link">contact</a>
+    <a href="https://www.linkedin.com/in/emre-bozkurt-01285429b/" class="link" id="linkedin_top" target="_blank">Linked<span id="linkedin_box">in</span></a>
   </div>
   <p id="hello_world">Hello World!</p>
   <div id="main_text_section">
@@ -35,8 +35,12 @@
   <div id="contact">
     <h1 class="special_text" id="contact_header">contact</h1>
     <div id="logos">
-      <img class="logo" src="github-logo.png" alt="github logo">
-      <img class="logo" src="linkedin-logo.png" alt="linkedin logo">
+      <a href="https://github.com/FlyingGrasss">
+        <img class="logo" src="github-logo.png" alt="github logo">
+      </a>
+      <a href="https://www.linkedin.com/in/emre-bozkurt-01285429b/">
+        <img class="logo" src="linkedin-logo.png" alt="linkedin logo">
+      </a>
     </div>
   </div>
   <h3 id="more_to_come">More to come...</h3>
