fixed a pixel gap bug on links

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <div id="contact">
     <h1 class="special_text" id="contact_header">contact</h1>
     <div id="logos">
-      <a href="https://github.com/FlyingGrasss">
+      <a href="https://github.com/FlyingGrasss" class="link">
         <img class="logo" src="github-logo.png" alt="github logo">
       </a>
-      <a href="https://www.linkedin.com/in/emre-bozkurt-01285429b/">
+      <a href="https://www.linkedin.com/in/emre-bozkurt-01285429b/" class="link">
         <img class="logo" src="linkedin-logo.png" alt="linkedin logo">
       </a>
     </div>
