fixed responsive design to some extent

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
   </div>
   <p id="hello_world">Hello World!</p>
   <div id="main_text_section">
-    <h1 id="main_text">I'm <span class="special_text">Emre</span>, a programmer with a passion for <span class="special_text" id="rotating_text"></span></h1>
+    <h1 id="main_text">I'm <span class="special_text" id="emre_text">Emre</span>, a programmer with a passion for <span class="special_text" id="rotating_text"></span></h1>
     <script src="script.js"></script>
   </div>
   <div id="projects">
     <h1 class="special_text" id="projects_text">my projects</h1>
-    <h3>Python Image Scraper</h3>
+    <div id="projects_container">
+      <h3>Python Image Scraper</h3>
+    </div>
   </div>
   <div id="about">
     <h1 class="special_text" id="about_text">about</h1>
-    <h3 id="first_paragraph">Hey there! I’m Emre, your go-to coder for making life easier and more fun. I started coding as a hobby and now I’m all about Python, automation, and turning boring tasks into cool projects.</p>
-    <h3 id="second_paragraph">I built a web scraper to snag images based on what you need and a script that updates my uncle’s website with daily news—talk about making tech work for you! Plus, I’m a fan of web design, mixing creativity with code.</p>
-    <h3 id="third_paragraph">Let’s make something awesome together!</p>
+    <h3 id="first_paragraph" class="normal_text">Hey there! I’m Emre, your go-to coder for making life easier and more fun. I started coding as a hobby and now I’m all about Python, automation, and turning boring tasks into cool projects.</p>
+    <h3 id="second_paragraph" class="normal_text">I built a web scraper to snag images based on what you need and a script that updates my uncle’s website with daily news—talk about making tech work for you! Plus, I’m a fan of web design, mixing creativity with code.</p>
+    <h3 id="third_paragraph" class="normal_text">Let’s make something awesome together!</p>
   </div>
   <div id="contact">
     <h1 class="special_text" id="contact_header">contact</h1>
