Updated colors to make it more lively

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <img class="logo" src="linkedin-logo.png" alt="linkedin logo">
       </a>
     </div>
+    <h3 style="text-align: center;">emre.bozqurt@gmail.com</h3>
   </div>
   <h3 id="more_to_come">More to come...</h3>
 </body>
