Added animations and some cool images

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
     <h1 id="main_text">I'm <span class="special_text" id="emre_text">Emre</span>, a programmer with a passion for <span class="special_text" id="rotating_text"></span></h1>
     <script src="script.js"></script>
   </div>
-  <div id="projects">
-    <h1 class="special_text" id="projects_text">my projects</h1>
-    <div id="projects_container">
-      <h3>Python Image Scraper</h3>
+  <div id="projects" class="autoShow">
+    <h1 class="special_text" id="projects_text" style="margin-bottom: 30px;">my projects</h1>
+    <div id="projects_container" class="autoShow">
+      <h2 style="font-weight: 1000; color: #222222; margin-bottom: 20px;">Python Image Scraper</h2>
+      <img src="carbon.png" alt="code" width="600px">
     </div>
   </div>
-  <div id="about">
+  <div id="about" class="autoShow">
     <h1 class="special_text" id="about_text">about</h1>
     <h3 id="first_paragraph" class="normal_text">Hey there! I’m Emre, your go-to coder for making life easier and more fun. I started coding as a hobby and now I’m all about Python, automation, and turning boring tasks into cool projects.</p>
     <h3 id="second_paragraph" class="normal_text">I built a web scraper to snag images based on what you need and a script that updates my uncle’s website with daily news—talk about making tech work for you! Plus, I’m a fan of web design, mixing creativity with code.</p>
     <h3 id="third_paragraph" class="normal_text">Let’s make something awesome together!</p>
   </div>
-  <div id="contact">
+  <div id="contact" class="autoShow">
     <h1 class="special_text" id="contact_header">contact</h1>
     <div id="logos">
       <a href="https://github.com/FlyingGrasss" class="link" target="_blank">
@@ -47,5 +48,6 @@
     <h3 style="text-align: center;">emre.bozqurt@gmail.com</h3>
   </div>
   <h3 id="more_to_come">More to come...</h3>
+  <div style="height: 200px;"></div>
 </body>
 </html>
