added head tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="icon" href="EB.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Emre Bozkurt" />
+  <meta property="og:description" content="Cool Portfolio" />
+  <meta property="og:image" content="EB.png" />
+  <meta property="og:url" content="https://emrebozkurt.netlify.app" />
+  <meta property="og:type" content="website" />
   <title>Emre Bozkurt</title>
 </head>
 
