updated head tags

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Emre Bozkurt" />
-  <meta property="og:description" content="Cool Portfolio" />
-  <meta property="og:image" content="EB.png" />
+  <meta property="og:image" content="https://emrebozkurt.netlify.app/EB.png" />
   <meta property="og:url" content="https://emrebozkurt.netlify.app" />
   <meta property="og:type" content="website" />
   <title>Emre Bozkurt</title>
