--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="https://www.linkedin.com/in/emre-bozkurt-01285429b/" class="link" id="linkedin_top"
       target="_blank">Linked<span id="linkedin_box">in</span></a>
   </div>
-  <p id="hello_world">Hello World!</p>
+  <a href="/name_printer.html" id="hello_world">Hello World!</a>
   <div id="main_text_section">
     <h1 id="main_text">I'm <span class="special_text" id="emre_text">Emre</span>, a programmer with a passion for <span
         class="special_text" id="rotating_text"></span></h1>
@@ -43,6 +43,7 @@
         <img src="landscape3.jpeg" class="marquee_item" id="marquee_item3" alt="">
         <img src="landscape4.jpeg" class="marquee_item" id="marquee_item4" alt="">
       </div>
+      
     </div>
   </div>
   <div id="about" class="autoShow">
