--- a/name_printer.html
+++ b/name_printer.html
@@ -16,6 +16,7 @@
         .container {
             max-width: 900px;
             margin: 0 auto;
+            padding: 0 15px;
         }
         h1 {
             text-align: center;
@@ -41,7 +42,8 @@
             font-size: 18px;
             font-family: 'Consolas', 'Courier New', monospace;
             border-radius: 5px;
-            width: 250px;
+            width: min(250px, 70%);
+            max-width: 300px;
         }
         button {
             background: #007acc;
@@ -71,13 +73,13 @@
             align-items: center;
             color: #cccccc;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 18px;
             margin-bottom: 15px;
         }
         .language-logo {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
+            width: 40px;
+            height: 40px;
+            margin-right: 15px;
         }
         .code {
             font-family: 'Consolas', 'Courier New', monospace;
@@ -87,6 +89,7 @@
             padding: 15px;
             border-radius: 5px;
             border-left: 3px solid #007acc;
+            overflow-x: auto;
         }
         .output {
             background: #0c0c0c;
@@ -97,6 +100,85 @@
             color: #cccccc;
             font-family: 'Consolas', 'Courier New', monospace;
             font-size: 14px;
+        }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+            h1 {
+                font-size: 1.8rem;
+            }
+            .subtitle {
+                font-size: 1rem;
+            }
+            input {
+                width: 60%;
+                font-size: 16px;
+                padding: 10px;
+            }
+            button {
+                margin-left: 5px;
+                margin-top: 10px;
+                padding: 10px 20px;
+                font-size: 16px;
+            }
+            .language-block {
+                padding: 15px;
+                margin: 15px 0;
+            }
+            .language-title {
+                font-size: 16px;
+            }
+            .language-logo {
+                width: 32px;
+                height: 32px;
+                margin-right: 12px;
+            }
+            .code {
+                font-size: 12px;
+                padding: 12px;
+            }
+            .output {
+                font-size: 12px;
+                padding: 8px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+            .subtitle {
+                font-size: 0.9rem;
+            }
+            input {
+                width: 70%;
+                font-size: 14px;
+            }
+            button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
+            .language-block {
+                padding: 12px;
+            }
+            .language-title {
+                font-size: 14px;
+            }
+            .language-logo {
+                width: 28px;
+                height: 28px;
+                margin-right: 10px;
+            }
+            .code {
+                font-size: 11px;
+                padding: 10px;
+            }
+            .output {
+                font-size: 11px;
+            }
         }
         .hidden {
             display: none;
