--- a/name_printer.html
+++ b/name_printer.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="İsmini Programlama Dillerinde Gör" />
+    <meta property="og:image" content="https://emrebozkurt.netlify.app/EB.png" />
+    <meta property="og:url" content="https://emrebozkurt.netlify.app/name_printer.html" />
+    <meta property="og:type" content="website" />
     <link rel="icon" href="EB.ico" type="image/x-icon">    
     <title>İsmini Programlama Dillerinde Gör</title>
     <style>
